# devgear

./: .gitignore  CLAUDE.md  PostgreSQL-Sync-Interval-Risk-Assessment.md  README.md  conftest.py  pyproject.toml
.claude-plugin/: marketplace.json
plugins/devgear/: README.md  install-dev.sh  install.sh  install.sh.ubuntu  install_mac.sh.backup  model_sources.json  pg_setup.sh  pg_setup.sql  pg_setup_native.sh  pyproject.toml  requirements.in  requirements.txt  settings.json
plugins/devgear/.claude-plugin/: plugin.json
plugins/devgear/agents/: a-analyzer.md  a-arch.md  a-clean.md  a-comparator.md  a-explore.md  a-grader.md  a-harness.md  a-observer.md  a-perf.md  a-plan.md  a-reforch.md  a-review.md  a-secure.md  a-simplify.md  a-tdd.md
plugins/devgear/commands/: c-bugfix.md  c-clean.md  c-comply.md  c-dashboard.md  c-evolve.md  c-featdev.md  c-harness-audit.md  c-harness.md  c-instinct.md  c-learn-eval.md  c-plan.md  c-refactor.md  c-review.md  c-sessions.md  c-simplify.md  c-skill-create.md  c-skillgen.md  c-stocktake.md  c-tdd.md  c-testmod.md
plugins/devgear/hooks/: README.md  hooks.json
plugins/devgear/onnx/: _build_onnx_lib.sh  _run_onnx_background.sh  build_onnx_model.sh  onnx.json  requirements-build.in  requirements-build.txt
plugins/devgear/rules/: r-docs.md  r-interfaces.md  r-performance.md  r-quality.md  r-reliability.md  r-structure.md  r-testing.md
plugins/devgear/runtime/: devgear-helpers.sh
plugins/devgear/skills/s-adr/: SKILL.md
plugins/devgear/skills/s-checkpoint/: SKILL.md
plugins/devgear/skills/s-comply/: SKILL.md
plugins/devgear/skills/s-featdev/: SKILL.md
plugins/devgear/skills/s-gitflow/: SKILL.md
plugins/devgear/skills/s-gitflow/references/: branching-strategies.md  commit-conventions.md
plugins/devgear/skills/s-grillme/: SKILL.md
plugins/devgear/skills/s-guard/: SKILL.md
plugins/devgear/skills/s-learn/: SKILL.md
plugins/devgear/skills/s-refprep/: SKILL.md
plugins/devgear/skills/s-refrb/: SKILL.md
plugins/devgear/skills/s-search/: SKILL.md
plugins/devgear/skills/s-secure/: SKILL.md
plugins/devgear/skills/s-simplify/: SKILL.md
plugins/devgear/skills/s-skillmake/: SKILL.md
plugins/devgear/skills/s-skillmaster/: SKILL.md
plugins/devgear/skills/s-skilltune/: SKILL.md
plugins/devgear/skills/s-slim/: SKILL.md
plugins/devgear/skills/s-stocktake/: SKILL.md
plugins/devgear/skills/s-tdd/: SKILL.md
plugins/devgear/src/devgear/: __init__.py  install_catalog.py  launcher.py  skill_create_output.py
plugins/devgear/src/model_build/: __init__.py  __main__.py  build_config.json  download.py  export.py  verify.py
plugins/devgear/tests/: conftest.py
plugins/devgear/tests/ci/: test_catalog_check.py  test_check_unicode_safety.py  test_ci_common.py  test_harness_audit.py  test_harness_audit_more.py  test_validate_commands_rules_additional.py  test_validate_hooks.py  test_validate_hooks_additional.py  test_validate_install_manifests.py  test_validate_install_manifests_additional.py  test_validator_edges.py  test_validators.py
plugins/devgear/tests/hooks/: test_additional_hooks.py  test_desktop_notify.py  test_hook_common.py  test_hook_edge_cases.py  test_hook_helpers.py  test_install_lock.py  test_post_bash_compact.py  test_post_bash_pr_created.py  test_quality_gate.py  test_quality_gate_presets.py  test_runtime.py  test_session_install.py  test_session_start_contract.py
plugins/devgear/tests/lib/: __init__.py  test_agent_compress.py  test_devgear_launcher.py  test_devgear_settings.py  test_git_hosting.py  test_hook_flags.py  test_inspection.py  test_mem_helper.py  test_package_manager.py  test_project_detect.py  test_project_detect_additional.py  test_resolve_devgear_root.py  test_resolve_formatter.py  test_sanitize.py  test_shell_split.py  test_slim_text.py  test_subprocess_utils.py  test_utils.py
plugins/devgear/tests/mem/: conftest.py  test_analysis_helpers.py  test_bridge.py  test_bridge_additional.py  test_chunker.py  test_cli.py  test_cli_additional.py  test_cli_error_paths.py  test_cli_migrate.py  test_cli_sync_handlers.py  test_cli_team.py  test_compaction.py  test_context.py  test_database.py  test_embedding.py  test_embedding_security.py  test_importers.py  test_item_usage_queries.py  test_logger.py  test_model_assembler.py  test_paths.py  test_pg_database.py  test_pg_database_exclude.py  test_redaction.py  test_reducer.py  test_search.py  test_settings.py  test_settings_slim.py  test_sync.py  test_tag_stripping.py  test_team_context.py
plugins/devgear/tests/model_build/: test_build_config.py  test_download.py  test_export.py  test_main.py  test_split.py  test_verify.py
plugins/devgear/tests/onnx/: test_run_onnx_background.py
plugins/devgear/tests/scripts/: test_bump_version_script.py  test_cli.py  test_devgear_helpers.py  test_install_catalog.py  test_install_script.py  test_pg_setup_native_script.py  test_pg_setup_script.py
plugins/devgear/tests/skills/: test_benchmark_reporting.py  test_cli_runner.py  test_improve_description.py  test_run_eval_and_loop.py  test_skill_create_output.py  test_skill_validation_and_packaging.py  test_utils.py
(+302 files in other folders)
