[project]
name = "devgear"
version = "0.0.1"
description = "開発に必要な汎用プラグイン集です。エージェント、スキル、フック、コマンドをまとめて導入し、計画・実装・検証・レビューの流れを揃えます。"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "aokumablue", url = "https://github.com/aokumablue" }
]
keywords = [
    "agents",
    "skills",
    "commands",
    "hooks",
    "rules",
    "workflow",
    "plugin"
]

dependencies = [
    "pydantic>=2.0",
    "sentence-transformers>=3.0,<4.0",
    "transformers>=4.41,<5.0",
    "torch>=2.0,<3.0",
    "numpy<2",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "vulture>=2.0",
]

[project.urls]
Homepage = "https://github.com/aokumablue/devgear#readme"
Repository = "https://github.com/aokumablue/devgear.git"
Issues = "https://github.com/aokumablue/devgear/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devgear"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/devgear"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
